more space for MapObjectUris; formatting